Update Archigos 4-1.1 EDA.ipynb

--- a/Archigos 4-1.1 EDA.ipynb
+++ b/Archigos 4-1.1 EDA.ipynb
@@ -2079,8 +2079,7 @@
     "df_entryexit = df_entryexit.drop(['obsid', 'leadid', 'ccode', 'countrynames', 'worldregion',\n",
     "       'leader', 'eindate', 'eoutdate', 'exitcode',\n",
     "       'prevtimesinoffice', 'gender', 'yrborn', 'yrdied', 'borndate',\n",
-    "       'deathdate', 'numentry', 'numexit', 'numexitcode', 'numposttenurefate',\n",
-    "       'fties', 'ftcur'], axis=1)\n",
+    "       'deathdate'], axis=1)\n",
     "df_entryexit.columns"
    ]
   },
